AC_PREREQ(2.52)

AC_INIT(ModemManager, 0.1, tambet@gmail.com, ModemManager)
AM_INIT_AUTOMAKE([])
AM_MAINTAINER_MODE

AC_CONFIG_HEADERS(config.h)

dnl Required programs
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(MM, dbus-glib-1 >= 0.75 glib-2.0 >= 2.14 gmodule-2.0 gobject-2.0 hal)

AC_ARG_WITH(docs, AC_HELP_STRING([--with-docs], [Build ModemManager documentation]))
AM_CONDITIONAL(WITH_DOCS, test "x$with_docs" = "xyes")
case $with_docs in
       yes) ;;
       *)
               with_docs=no
               ;;
esac

AC_CONFIG_FILES([
Makefile
src/Makefile
plugins/Makefile
test/Makefile
introspection/Makefile
ModemManager.pc
])
AC_OUTPUT
